--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
