--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-password-strength-bar": "^0.4.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
