--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.1",
+    "openai": "^4.51.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
