--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "chart.js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.1",
     "openai": "^4.51.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-mathjax-preview": "^2.2.6",
     "react-password-strength-bar": "^0.4.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
