--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "openai": "^4.51.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
