--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-typical": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
